# robojira

./: .flake8  .gitignore  README.md  cli.py  excel_export.py  pyproject.toml
helpers/: report_analyzer.py  working_days.py
robojira_cli/: cli.py  config_helper.py  excel_export.py  jira_client.py  pyproject.toml
robojira_cli/helpers/: classes.py  dateutils.py  export_func.py  report_analyzer.py  text_decoration.py
