[tool.poetry]
name = "robojira-cli"
version = "0.7.0"
description = ""
readme = "README.md"
authors = ["Maksym Biriukov <maximbirukov77@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
xlsxwriter = "^3.1.9"
requests = "^2.31.0"

[tool.poetry.scripts]
robojira = "robojira_cli.cli:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
