[tool.poetry]
name = "robojira-cli"
version = "0.1.0"
description = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
xlsxwriter = "^3.1.9"

[tool.poetry.scripts]
robojira = "robojira_cli.cli:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
